src/testsuite/single/tests/compiler/fail/no_member.c
class foo {
    int x;
}

void foo() {
    foo y;
    y->z;
}
